# spiffworkflow-backend/src/spiffworkflow_backend/api.yml
@@ -2324,6 +2324,12 @@ paths:
         description: The page number to return. Defaults to page 1.
         schema:
           type: integer
+      - name: json_metadata_filter
+        in: query
+        required: false
+        description: Filter tasks by json_metadata values. Format is key:value pairs separated by commas.
+        schema:
+          type: string
     get:
       tags:
         - Tasks
@@ -2361,6 +2367,12 @@ paths:
         description: The page number to return. Defaults to page 1.
         schema:
           type: integer
+      - name: json_metadata_filter
+        in: query
+        required: false
+        description: Filter tasks by json_metadata values. Format is key:value pairs separated by commas.
+        schema:
+          type: string
     get:
       tags:
         - Process Instances
@@ -2424,6 +2436,12 @@ paths:
         description: The page number to return. Defaults to page 1.
         schema:
           type: integer
+      - name: json_metadata_filter
+        in: query
+        required: false
+        description: Filter tasks by json_metadata values. Format is key:value pairs separated by commas.
+        schema:
+          type: string
     get:
       tags:
         - Process Instances
@@ -2459,6 +2477,12 @@ paths:
         description: The page number to return. Defaults to page 1.
         schema:
           type: integer
+      - name: json_metadata_filter
+        in: query
+        required: false
+        description: Filter tasks by json_metadata values. Format is key:value pairs separated by commas.
+        schema:
+          type: string
     get:
       tags:
         - Process Instances
@@ -4556,6 +4580,16 @@ components:
         primary_process_id:
           type: string
           nullable: true
+        task_metadata_extraction_paths:
+          type: array
+          nullable: true
+          items:
+            type: object
+            properties:
+              key:
+                type: string
+              path:
+                type: string
     ProcessModelCopyRequest:
       type: object
       required:
