# spiffworkflow-backend/src/spiffworkflow_backend/routes/process_models_controller.py
@@ -143,6 +143,7 @@ def process_model_update(
         "primary_process_id",
         "description",
         "metadata_extraction_paths",
+        "task_metadata_extraction_paths",
         "fault_or_suspend_on_exception",
         "exception_notification_addresses",
     ]
